[package]
name = "kms_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
rsa = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
validator = { version = "0.16", features = ["derive"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
